Add WebClientConfig