@@ -1,13 +1,15 @@
 package com.example.dummyjson.service;
 
 import com.example.dummyjson.dto.Product;
+import com.example.dummyjson.dto.ProductList;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.server.ResponseStatusException;
+import reactor.core.publisher.Mono;
 
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.Date;
 import java.util.List;
 
 @Service
@@ -15,16 +17,32 @@ public class ProductService {
 
     private final String BASE_URL = "https://dummyjson.com/products";
 
+    private final WebClient webClient;
+
     @Autowired
-    private RestTemplate restTemplate;
+    public ProductService(WebClient.Builder webClientBuilder) {
+        this.webClient = webClientBuilder
+                .baseUrl(BASE_URL)
+                .defaultHeader("Accept", "application/json")
+                .build();;
+    }
+
 
     public List<Product> getAllProducts() {
-        Product[] products = restTemplate.getForObject(BASE_URL, Product[].class);
-        return Arrays.asList(products);
+        ProductList productList = webClient.get()
+                .retrieve()
+                .bodyToMono(ProductList.class)
+                .doOnError(error -> System.out.println("Error occurred: " + error.getMessage())).block();
+        return productList != null ? productList.getProducts() : List.of();
     }
 
     public Product getProductById(Long id) {
-        String url = BASE_URL + "/" + id;
-        return restTemplate.getForObject(url, Product.class);
+        String url = "/" + id;
+        return webClient.get()
+                .uri(url)
+                .retrieve()
+                .onStatus(HttpStatusCode::is4xxClientError, response -> Mono.error(new ResponseStatusException(HttpStatus.NOT_FOUND)))
+                .bodyToMono(Product.class)
+                .doOnError(error -> System.out.println("Error occurred: " + error.getMessage())).block();
     }
 }
